added archetype files for different content (talk type, languages, etc)

--- a/hugo.toml
+++ b/hugo.toml
@@ -46,7 +46,7 @@ series = "series"
 
 [Languages]
 [Languages.zh-CN]
-title = "运筹OR帷幄｜讲座汇总"
+title = "运筹OR帷幄讲座汇总"
 weight = 0
 languagename = "中文"
 
